# vdesk

./: .gitignore  README.md  vdesk.sh
gui/: CMakeLists.txt  des.tsv  install.sh  main.cpp  vdesk.fbp  vdesk_gui.cpp  vdesk_gui.h  vdesk_gui.py
